fix: make github-advanced-security bot happy
Signed-off-by: Stefano Braghin <527806+stefano81@users.noreply.github.com>