@@ -102,8 +102,6 @@ test {
     minHeapSize = "5g"
     maxHeapSize = "10g"
 
-    //jvmArgs '--add-exports java.base/sun.nio.ch=ALL-UNNAMED'
-
     testLogging {
         events 'failed'
         exceptionFormat 'short'
